styles.css
/*********************** global *********************/
/* @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&display=swap");*/
:root {
  --nowplaying-progress: 75%;
}
@font-face {
  font-family: "Circular";
  src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot");
  src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot?#iefix")
      format("embedded-opentype"),
    url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.woff")
      format("woff"),
    url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.ttf")
      format("truetype");
  font-style: normal;
  font-weight: 700;
}
body {
  height: 100vh;
  margin: 0;
  background-repeat: no-repeat;
  background-attachment: fixed;
  font-family: "Circular", sans-serif;
  background: rgb(39, 77, 120);
  background: linear-gradient(
    130deg,
    rgba(39, 77, 120, 1) 0%,
    rgba(28, 54, 83, 1) 36%,
    rgba(8, 15, 23, 1) 100%
  );
  background-repeat: no-repeat;
  background-attachment: fixed;
  margin: 0px;
  padding: 0px;
  /* font-family: 'Nunito Sans', sans-serif; */
  font-family: "Circular", Arial, Helvetica, sans-serif;
  overflow: hidden;
}
.mainframe {
  max-height: calc(100vh - 90px);
  height: 100%;
  max-width: 100vw;
  width: 100%;
  display: flex;
  flex-direction: row;
  overflow-y: auto;
}
.main-content {
  max-width: calc(100vw - 232px);
  width: 100%;
  margin-left: 232px;
  padding-left: 1rem;
  overflow-y: auto;
}

/********************** Sidebar **********************/

aside {
  background-color: #040404;
  color: #b3b3b3;
  max-height: calc(100vh - 90px);
  height: 100%;
  top: 0px;
  max-width: 232px;
  width: 100%;
  position: fixed;
}
.logo {
  width: auto;
  height: 4em;
  display: flex;
  padding-top: 2rem;
  margin-left: 2rem;
  margin-bottom: 1rem;
}

.menu {
  font-size: 12px;
}
.menu a {
  color: #b3b3b3;
  z-index: 1;
}
.menu a:hover {
  text-decoration: none;
  color: white;
  transition: 0.5s;
}

.menu ul {
  list-style-type: none;
  font-size: 12px;
}
.menu ul li {
  padding-top: 1rem;
  font-size: 12px;
}
.menu i {
  padding-right: 20px;
}
.menu h6 {
  padding-left: 35px;
  margin-top: 2em;
  margin-bottom: -0.3em;
}
.menu hr {
  border: 0;
  clear: both;
  display: block;
  width: 96%;
  background-color: #b3b3b3;
  height: 1px;
  width: 80%;
  margin: 0 auto;
  margin-bottom: 5px;
}
.stick-to-bottom {
  position: absolute;
  bottom: 10px;
}

.menu li:active::after {
  background: #afaeae50;
  color: white !important;
  border-radius: 4px;
  content: "";
  display: block;
  position: absolute;
  margin-top: -30px;
  margin-left: -25px;
  height: 2.5em;
  width: 15vw;
}
.menu li:hover a {
  color: #fff;
}

/* scrollbar */

.playlists {
  position: relative;
  padding-left: 15%;
  font-size: smaller;
  padding-top: 20px;
  overflow-y: auto;
  height: 130px;
}
/* The emerging W3C standard
   that is currently Firefox-only */
* {
  scrollbar-width: 5vw;
  scrollbar-color: #040404 #b3b3b3;
}

/* Works on Chrome/Edge/Safari */
*::-webkit-scrollbar {
  width: .75rem;
}
*::-webkit-scrollbar-track {
  background: transparent; 
}
*::-webkit-scrollbar-thumb {
  background: rgba(70, 70, 70, 0.76); 
}
*::-webkit-scrollbar-thumb:hover{
  background: rgba(110, 110, 110, 0.76); 
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  .logo {
    width: auto;
    height: 4rem;
    display: flex;
    padding-top: 0.5;
    margin-bottom: 1rem;
    margin-left: 1rem;
  }
  .menu ul li {
    padding-top: 0.8rem;
    /* font-size: 0.5rem; */
    /* margin-left: -3rem; */
  }
  /* .menu h6 {
    padding-left: 15px;
    margin-top: 1rem;
    margin-bottom: 0.3rem;
    font-size: 0.8rem; 
  }*/
  .menu ul a img {
    width: 10px;
    height: 10px;
  }
  .playlists {
    height: 220px;
    overflow-y: auto;
  }
}
/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
  .logo {
    width: auto;
    height: 4rem;
    display: flex;
    padding-top: 0.5;
    margin-bottom: 1rem;
    margin-left: 1rem;
  }
  .menu ul li {
    padding-top: 0.8rem;
    /* font-size: 0.5rem; */
    /* margin-left: -3rem; */
  }
  /* .menu h6 {
    padding-left: 15px;
    margin-top: 1rem;
    margin-bottom: 0.3rem;
    font-size: 0.8rem; 
  }*/
  .menu ul a img {
    width: 20px;
    height: 20px;
  }
  .playlists {
    height: 220px;
    overflow-y: auto;
  }

  .menu h6 .nav-tabs .nav-item.show .nav-link,
  .nav-tabs .nav-link {
    background-color: transparent;
    border: 0px;
    font-size: 10px;
    font-weight: 500;
    color: whitesmoke;
    letter-spacing: 0.1em;
    margin-bottom: 10px;
  }

  .nav-tabs .nav-item.show .nav-link,
  .nav-tabs .nav-link:after {
    display: block;
    content: "";
    margin-bottom: 10px;
    border-bottom: solid 2px limegreen;
    transform: scaleX(0);
    transition: 300ms ease-in-out;
  }

  .nav-tabs .nav-item.show .nav-link,
  .nav-tabs .nav-link:hover:after {
    transform: scaleX(0.5);
  }
}
/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  .logo {
    width: auto;
    height: 4rem;
    display: flex;
    padding-top: 0.5;
    margin-bottom: 1rem;
    margin-left: 1rem;
  }
  .menu ul li {
    padding-top: 0.8rem;
    /* font-size: 0.8rem; */
    /* margin-left: -25px; */
  }
  /* .menu h6 {
    padding-left: 15px;
    margin-top: 3rem;
    margin-bottom: 0.3rem;
    font-size: 0.7rem;
  } */
  .playlists {
    height: 220px;
    overflow-y: auto;
  }

  .menu h6 .nav-tabs .nav-item.show .nav-link,
  .nav-tabs .nav-link {
    background-color: transparent;
    border: 0px;
    font-size: 10px;
    font-weight: 500;
    color: whitesmoke;
    letter-spacing: 0.1em;
  }

  .nav-tabs .nav-item.show .nav-link,
  .nav-tabs .nav-link:after {
    display: block;
    content: "";
    margin-bottom: 10px;
    border-bottom: solid 2px limegreen;
    transform: scaleX(0);
    transition: transform 300ms ease-in-out;
  }
}
/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  .logo {
    width: auto;
    height: 4rem;
    display: flex;
    padding-top: 2rem;
    margin-bottom: 1em;
    margin-left: 2rem;
  }
  .menu ul li {
    padding-top: 1rem;
    /* font-size: 1rem; */
    margin-left: 0px;
  }
  /* .menu h6 {
    padding-left: 15px;
    margin-top: 1.3rem;
    margin-bottom: 0rem;
    font-size: 0.9rem;
    margin-left: 25px;
  } */
  .menu ul a img {
    width: 20px;
    height: 20px;
  }
  .playlists {
    height: 220px;
    overflow-y: auto;
  }

  .menu h6 .nav-tabs .nav-item.show .nav-link,
  .nav-tabs .nav-link {
    background-color: transparent;
    border: 0px;
    font-size: 10px;
    font-weight: 500;
    color: whitesmoke;
    letter-spacing: 0.1rem;
  }

  .nav-tabs .nav-item.show .nav-link,
  .nav-tabs .nav-link:after {
    display: block;
    content: "";
    margin-bottom: 10px;
    border-bottom: solid 2px limegreen;
    transform: scaleX(0);
    transition: 300ms ease-in-out;
  }
}

/********************* cover page *****************/
.nav {
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  list-style: none;
}

.main-content h1 {
  color: white;
  font-size: 36px;
  font-weight: 800;
}

.main-content h6 {
  color: white;
  font-size: 10px;
  font-weight: 600px;
}

.main-content h6 .nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link {
  background-color: transparent;
  border: 0px;
  font-size: 10px;
  font-weight: 500;
  color: whitesmoke;
  letter-spacing: 0.1rem;
  margin-bottom: 10px;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link:after {
  display: block;
  content: "";
  margin-bottom: 10px;
  border-bottom: solid 2px limegreen;
  transform: scaleX(0);
  transition: 300ms ease-in-out;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link:hover:after {
  transform: scaleX(0.5);
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
  background-color: transparent;
  border: 0px;
  padding-bottom: 1px;
  border-bottom: 3px solid limegreen;
  font-weight: 500;
  color: whitesmoke;
  transition: 0.5s ease-in-out;
  -moz-transition: 0.5s ease-in-out;
  -webkit-transition: 0.5s ease-in-out;
}
.nav-tabs {
  border-bottom: none;
}

.card .spotify-card-icon {
  position: absolute;
  top: 5px;
  left: 5px;
}

.spotify-card-icon {
  color: grey;
  opacity: 0.5;
}

.card:hover .spotify-card-icon {
  color: limegreen;
  opacity: 1;
  z-index: 10001;
}

.trending.card {
  max-width: 150px;
  max-height: 150px;
  border: 0;
  box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.3);
  margin-top: 1.5rem;
}

.card {
  padding: 0px;
  margin: 0.5rem;
}
.trending.card > div {
  position: absolute;
  display: inline-block;
  color: white;
  text-align: center;
  left: 0;
  right: 0;
  bottom: -2rem;
}
.card > .card-img-top img {
  width: 100%;
  height: 100%;
  background-attachment: fixed;
  object-fit: cover;
}

.overlay-icons {
  display: none;
}

.overlay-icons {
  display: none;
}
.trending.card:hover .overlay-icons {
  display: block;
  justify-content: space-between;
  justify-content: center;
  align-content: center;
  text-align: center;
  position: absolute;
  padding-top: 40%;
  font-size: 25px;
  color: white;
  /* bottom: 0; */
  background: rgba(0, 0, 0, 0.5);
  width: 100%;
  height: 100%;
  transition: 1s ease;
  opacity: 0.9;

  z-index: 999;
}

.container,
.container-fluid,
.container-lg,
.container-md,
.container-sm,
.container-xl {
  width: 100%;
  padding-left: 25px;
  margin-left: 230px;
  max-width: calc(100vw - 232px);
  position: fixed;
  top: 0px;
}

/******************** bottom player ******************/
.player {
  color: #ccc;
  background-color: #282828;
  max-height: 90px;
  height: 100%;
  padding-top: 0.5rem;
  padding-top: 0.5rem;
  bottom: 0px;
  z-index: 10001;
}

.player-albumart {
  max-width: 30vw;
  width: 100%;
}
.player-controller {
  max-width: 40vw;
  width: 100%;
}
.player-setting {
  max-width: 30vw;
  width: 100%;
}
.nowplaying-albumart img {
  max-height: 56px;
  max-width: 56px;
  width: 100%;
  height: 100%;
  object-fit: cover;
  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.5);
}
.player-albumart .nowplaying-title {
  font-size: 0.9rem;
  font-weight: bold;
}
.player-albumart .nowplaying-artist {
  font-size: 0.7rem;
  font-weight: bold;
  color: grey;
}
.loved-track {
  position: relative;
}
.player-albumart .fas.fa-heart {
  position: absolute;
  z-index: 1;
  display: inline-block;
  top: 50%;
  left: 50%;
  font-size: 1.1rem;
  transform: translate(-50%, -48%);
}
.player-albumart .fas.fa-heart:hover {
  opacity: 1;
  color: #1db954;
}
.player-albumart .far.fa-heart:hover {
  opacity: 0;
}
.fa-play:hover,
.fa-pause:hover,
.fa-play:focus,
.fa-pause:focus {
  color: white;
  transform: scale(1.25);
  transition: 0.25s;
  position: relative;
}
.player-nowplaying {
  font-size: 0.8rem;
  font-weight: 300;
}
.player-progress {
  width: 100%;
  display: flex;
  align-items: center;
  margin: auto 1rem;
  background-color: grey;
}
#nowplayingProgress {
  width: var(--nowplaying-progress);
  height: 4px;
  background-color: #b3b3b3;
  border-radius: 2px;
}
#nowplayingProgress:hover {
  background-color: #1db954;
}
#nowplayingProgress:hover::after {
  content: " ";
  width: 16px;
  height: 16px;
  border-radius: 50%;
  font-size: 3rem;
  position: absolute;
  color: #b3b3b3;
  background-color: #b3b3b3;
  top: 50%;
  left: 50%;
  transform: translate(-200%, -50%);
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
  left: var(--nowplaying-progress);
  z-index: 1;
}
.player-volume {
  width: 125px;
  display: flex;
  align-items: center;
  margin-left: 0;
  margin-right: 1rem;
}
#nowplayingVolume {
  width: 100%;
  height: 4px;
  background-color: grey;
  border-radius: 2px;
}

